# pytorch-example

./: .gitignore  README.rst  pyproject.toml
pytorch_example/: data.py  train.py
pytorch_example/lightning/: __init__.py  data.py  train.py
