[tool.poetry]
name = "pytorch-example"
version = "0.1.3"
description = "Example codes with PyTorch"
authors = ["Keisuke Izumiya <izumiya.keisuke.24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

numpy = "^1.22.2"
torch = "^1.10.2"
torchvision = "^0.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
)/
'''